fix: Fixed CardModal title not wrapping correctly

--- a/client/src/components/CardModal/CardModal.module.scss
+++ b/client/src/components/CardModal/CardModal.module.scss
@@ -90,6 +90,7 @@
     display: inline-block;
     padding: 3px;
     margin-bottom: 1px;
+    word-break: break-word;
   }
 
   .headerListFieldWrapper {
